Added course stats window

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -168,19 +168,25 @@ initialRoles = Els rols inicials
 
 initialTypeTimes = unitat de temps predeterminat
 
+label.activities                  = # activity completion items
 label.categoryitem                = Categoria / article:
 label.close                       = Tanca
 label.component                   = Component:
 label.componentorevent            = Esdeveniment de component:
+label.componenttypes              = # component types
 label.course                      = Curs: 
 label.coursemodule                = M\u00F2duls del curs:
+label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
 label.downloadinglog              = S'est\u00E0 actualitzant el registre... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Data de refer\u00E8ncia final:
+label.enrolledusers               = # enrolled users
 label.event                       = Esdeveniment:
 label.filter                      = Filtre ...
 label.firstaccess                 = First access Moodle
+label.gradebook                   = # grade book all items
+label.gradebookcm                 = # grade book course module items
 label.group                       = Grup:
 label.groupbydate                 = Agrupar per:
 label.groups                      = Groups
@@ -192,6 +198,7 @@ label.loadingActivitiesCompletion = Desc\u00E0rrega d'Activitat de finalitzaci\u
 label.loadingqualifier            = Generant el qualificador del curs ... (Aquest proc\u00E9s pot trigar una mica de temps)
 label.loadingstats                = Generant estad\u00EDstiques...
 label.loadingstudents             = S'han carregat les qualificacions dels estudiants...
+label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
 label.ncourses                    = N\u00BA enrolled courses
 label.never                       = No disponible
@@ -205,10 +212,12 @@ label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = S'est\u00E0 desant en local ...
 label.section                     = Seccions:
+label.sections                    = # sections
 label.selectcourse                = Seleccioneu un curs:
 label.setMax                      = Canvia l'escala m\u00E0xima suggerida:
 label.startdate                   = Data de refer\u00E8ncia inicial:
 label.type                        = Tipus:
+label.typecomponentevents         = # components-events type 
 label.updatinglog                 = S'est\u00E0 actualitzant el registre... (This process may take some time)
 label.user                        = Usuari:
 label.welcome                     = Benvinguda
@@ -673,6 +682,7 @@ menu.about          = Quant a l'aplicaci\u00F3
 menu.changeconfig   = Change configuration
 menu.changesubject  = Canvia course
 menu.clearselection = Neteja la selecci\u00F3
+menu.coursestats    = Course stats
 menu.edit           = Edita
 menu.exit           = Sortir
 menu.exportconfig   = Export configuration...
