--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -168,19 +168,25 @@ initialRoles = Erste Rollen
 
 initialTypeTimes = Standardzeiteinheit
 
+label.activities                  = # activity completion items
 label.categoryitem                = Kategorie / Gegenstand:
 label.close                       = Schlie\u00DFen
 label.component                   = Komponente:
 label.componentorevent            = Komponentenereignis:
+label.componenttypes              = # component types
 label.course                      = Kurs: 
 label.coursemodule                = Kursmodule:
+label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
 label.downloadinglog              = Protokoll wird aktualisiert ... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Enddatum:
+label.enrolledusers               = # enrolled users
 label.event                       = Veranstaltung:
 label.filter                      = Filter...
 label.firstaccess                 = First access Moodle
+label.gradebook                   = # grade book all items
+label.gradebookcm                 = # grade book course module items
 label.group                       = Gruppe:
 label.groupbydate                 = Gruppiere nach:
 label.groups                      = Groups
@@ -192,6 +198,7 @@ label.loadingActivitiesCompletion = Das Herunterladen Aktivit\u00E4t Abschluss f
 label.loadingqualifier            = Kursqualifikator wird generiert ... (Dieser Vorgang kann einige Zeit dauern.)
 label.loadingstats                = Statistiken werden erstellt...
 label.loadingstudents             = Sch\u00FClernoten geladen...
+label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
 label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Nicht verf\u00FCgbar
@@ -205,10 +212,12 @@ label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Speichern in lokaler ...
 label.section                     = Abschnitt:
+label.sections                    = # sections
 label.selectcourse                = Bitte w\u00E4hlen Sie einen Kurs aus:
 label.setMax                      = Vorgeschlagene maximale Skala \u00E4ndern:
 label.startdate                   = Startbezugsdatum:
 label.type                        = Art:
+label.typecomponentevents         = # components-events type 
 label.updatinglog                 = Protokoll wird aktualisiert ... (This process may take some time)
 label.user                        = Nutzername:
 label.welcome                     = Herzlich willkommen
@@ -673,6 +682,7 @@ menu.about          = \u00DCber die Bewerbung
 menu.changeconfig   = Change configuration
 menu.changesubject  = Das Thema course
 menu.clearselection = Auswahl aufheben
+menu.coursestats    = Course stats
 menu.edit           = Bearbeiten
 menu.exit           = Ausgang
 menu.exportconfig   = Export configuration...
