--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -168,19 +168,25 @@ initialRoles = Initial Roles
 
 initialTypeTimes = Default time unit
 
+label.activities                  = # activity completion items
 label.categoryitem                = Category/Item:
 label.close                       = Close
 label.component                   = Component: 
 label.componentorevent            = Component\nEvent:
+label.componenttypes              = # component types
 label.course                      = Course: 
 label.coursemodule                = Course module:
+label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
 label.downloadinglog              = Downloading log... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = End reference date: 
+label.enrolledusers               = # enrolled users
 label.event                       = Event: 
 label.filter                      = Filter...
 label.firstaccess                 = First access Moodle
+label.gradebook                   = # grade book all items
+label.gradebookcm                 = # grade book course module items
 label.group                       = Group:
 label.groupbydate                 = Group by: 
 label.groups                      = Groups
@@ -192,6 +198,7 @@ label.loadingActivitiesCompletion = Downloading Activity Completion for each use
 label.loadingqualifier            = Generating course gradebook... (This process may take some time)
 label.loadingstats                = Generating statistics...
 label.loadingstudents             = Student grades loaded...
+label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
 label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Not available
@@ -205,10 +212,12 @@ label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Saving in local...
 label.section                     = Section:
+label.sections                    = # sections
 label.selectcourse                = Please, select a course:
 label.setMax                      = Change suggested max scale: 
 label.startdate                   = Start reference date: 
 label.type                        = Type:
+label.typecomponentevents         = # components-events type 
 label.updatinglog                 = Parsing logs... (This process may take some time)
 label.user                        = User:
 label.welcome                     = Welcome
@@ -673,6 +682,7 @@ menu.about          = _About application
 menu.changeconfig   = _Change configuration
 menu.changesubject  = _Change course
 menu.clearselection = _Clear selection
+menu.coursestats    = Course stats
 menu.edit           = _Edit
 menu.exit           = _Close
 menu.exportconfig   = Ex_port configuration...
