--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -168,19 +168,25 @@ initialRoles = Roles Iniciales
 
 initialTypeTimes = Unidad de tiempo predeterminado
 
+label.activities                  = # items de finalizaci\u00F3n de actividad
 label.categoryitem                = Categor\u00EDa/Item:
 label.close                       = Cerrar
 label.component                   = Componente: 
 label.componentorevent            = Componente\nEvento:
+label.componenttypes              = # tipos de componentes
 label.course                      = Curso: 
 label.coursemodule                = M\u00F3dulos:
+label.coursemodules               = # m\u00F3dulos del curso
 label.courses                     = Cursos matriculados
 label.downloadinglog              = Descargando registros... (Este proceso puede tardar cierto tiempo)
 label.email                       = Correo electr\u00F3nico
 label.enddate                     = Fecha de referencia final: 
+label.enrolledusers               = # usuarios matriculados
 label.event                       = Evento:
 label.filter                      = Filtro...
 label.firstaccess                 = Primer acceso Moodle
+label.gradebook                   = # todos los items del calificador
+label.gradebookcm                 = # items m\u00F3dulos del curso del calificador
 label.group                       = Grupo:
 label.groupbydate                 = Agrupar por: 
 label.groups                      = Grupos
@@ -192,6 +198,7 @@ label.loadingActivitiesCompletion = Descarga de Actividad de finalizaci\u00F3n p
 label.loadingqualifier            = Generando el calificador del curso... (Este proceso puede tardar unos segundos)
 label.loadingstats                = Generando estadisticas...
 label.loadingstudents             = Calificaciones de alumnos cargadas...
+label.logentries                  = # entradas de registros
 label.loggedin                    = Inicio sesi\u00F3n:
 label.ncourses                    = N\u00BA Cursos matriculados
 label.never                       = No disponible
@@ -205,10 +212,12 @@ label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Guardando en local...
 label.section                     = Secciones:
+label.sections                    = # secciones
 label.selectcourse                = Por favor, seleccione un curso:
 label.setMax                      = Cambiar escala m\u00E1xima sugerida: 
 label.startdate                   = Fecha de referencia inicial: 
 label.type                        = Tipo:
+label.typecomponentevents         = # tipos de componentes-evento
 label.updatinglog                 = Clasificando los registros... (Este proceso puede tardar cierto tiempo)
 label.user                        = Usuario:
 label.welcome                     = Bienvenida/o
@@ -673,6 +682,7 @@ menu.about          = A_cerca de la aplicaci\u00F3n
 menu.changeconfig   = Ca_mbiar configuraci\u00F3n
 menu.changesubject  = _Cambiar curso
 menu.clearselection = _Borrar selecci\u00F3n
+menu.coursestats    = Estad\u00EDsticas del curso
 menu.edit           = _Editar
 menu.exit           = _Salir
 menu.exportconfig   = Ex_portar configuraci\u00F3n...
