--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -168,19 +168,25 @@ initialRoles = Le r\u00F4le initial
 
 initialTypeTimes = unit\u00E9 de temps par d\u00E9faut
 
+label.activities                  = # activity completion items
 label.categoryitem                = Cat\u00E9gorie / article:
 label.close                       = Fermer
 label.component                   = Composant:
 label.componentorevent            = \u00C9v\u00E9nement de composant:
+label.componenttypes              = # component types
 label.course                      = Cours: 
 label.coursemodule                = Modules de cours:
+label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
 label.downloadinglog              = Mise \u00E0 jour du journal ... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Date de r\u00E9f\u00E9rence finale:
+label.enrolledusers               = # enrolled users
 label.event                       = Un \u00E9v\u00E9nement:
 label.filter                      = Filtre...
 label.firstaccess                 = First access Moodle
+label.gradebook                   = # grade book all items
+label.gradebookcm                 = # grade book course module items
 label.group                       = Groupe:
 label.groupbydate                 = Par groupe:
 label.groups                      = Groups
@@ -192,6 +198,7 @@ label.loadingActivitiesCompletion = T\u00E9l\u00E9chargement Activit\u00E9 ach\u
 label.loadingqualifier            = G\u00E9n\u00E9ration du qualificatif de cours ... (Ce processus peut prendre un certain temps)
 label.loadingstats                = G\u00E9n\u00E9rer des statistiques...
 label.loadingstudents             = Grades d'\u00E9l\u00E8ves charg\u00E9s...
+label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
 label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Indisponible
@@ -205,10 +212,12 @@ label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = \u00C9conomiser en local ...
 label.section                     = Des sections:
+label.sections                    = # sections
 label.selectcourse                = Veuillez choisir un cours:
 label.setMax                      = Changer l'\u00E9chelle max sugg\u00E9r\u00E9e:
 label.startdate                   = Date de r\u00E9f\u00E9rence de d\u00E9part:
 label.type                        = Type:
+label.typecomponentevents         = # components-events type 
 label.updatinglog                 = Mise \u00E0 jour du journal ... (This process may take some time)
 label.user                        = Utilisateur:
 label.welcome                     = Bienvenue
@@ -673,6 +682,7 @@ menu.about          = A propos de l'application
 menu.changeconfig   = Change configuration
 menu.changesubject  = Change le sujet
 menu.clearselection = Effacer la s\u00E9lection
+menu.coursestats    = Course stats
 menu.edit           = modifier
 menu.exit           = Sortie
 menu.exportconfig   = Export configuration...
