--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -168,19 +168,25 @@ initialRoles = Ruoli iniziali
 
 initialTypeTimes = unit\u00E0 di tempo predefinito
 
+label.activities                  = # activity completion items
 label.categoryitem                = Categoria / Articolo:
 label.close                       = Vicino
 label.component                   = Componente:
 label.componentorevent            = Evento componente:
+label.componenttypes              = # component types
 label.course                      = Corso: 
 label.coursemodule                = Moduli del corso:
+label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
 label.downloadinglog              = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Data di riferimento di fine:
+label.enrolledusers               = # enrolled users
 label.event                       = Evento:
 label.filter                      = Filtro...
 label.firstaccess                 = First access Moodle
+label.gradebook                   = # grade book all items
+label.gradebookcm                 = # grade book course module items
 label.group                       = Gruppo:
 label.groupbydate                 = Raggruppa per:
 label.groups                      = Groups
@@ -192,6 +198,7 @@ label.loadingActivitiesCompletion = Il download di attivit\u00E0 di completament
 label.loadingqualifier            = Generazione del qualificatore del corso ... (Questo processo potrebbe richiedere del tempo)
 label.loadingstats                = Generazione di statistiche...
 label.loadingstudents             = Voti degli studenti caricati...
+label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
 label.ncourses                    = N\u00BA enrolled courses
 label.never                       = Non disponibile
@@ -205,10 +212,12 @@ label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Salvataggio in locale ...
 label.section                     = Sezioni:
+label.sections                    = # sections
 label.selectcourse                = Per favore, seleziona un corso:
 label.setMax                      = Modifica scala massima suggerita:
 label.startdate                   = Inizia la data di riferimento:
 label.type                        = Genere:
+label.typecomponentevents         = # components-events type 
 label.updatinglog                 = Aggiornamento del registro ... (This process may take some time) (This process may take some time)
 label.user                        = Utente:
 label.welcome                     = Benvenuto
@@ -673,6 +682,7 @@ menu.about          = Informazioni sull'applicazione
 menu.changeconfig   = Change configuration
 menu.changesubject  = Cambia course
 menu.clearselection = Cancella selezione
+menu.coursestats    = Course stats
 menu.edit           = modificare
 menu.exit           = Uscita
 menu.exportconfig   = Export configuration...
