--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -168,19 +168,25 @@ initialRoles = Roles iniciais
 
 initialTypeTimes = unidade de tempo padr\u00E3o
 
+label.activities                  = # activity completion items
 label.categoryitem                = Categoria / Item:
 label.close                       = Perto
 label.component                   = Componente:
 label.componentorevent            = Evento Componente:
+label.componenttypes              = # component types
 label.course                      = Curso: 
 label.coursemodule                = M\u00F3dulos do curso:
+label.coursemodules               = # course modules
 label.courses                     = Enrolled courses
 label.downloadinglog              = Atualizando log ... (This process may take some time)
 label.email                       = E-mail
 label.enddate                     = Data de refer\u00EAncia final:
+label.enrolledusers               = # enrolled users
 label.event                       = Evento:
 label.filter                      = Filtro...
 label.firstaccess                 = First access Moodle
+label.gradebook                   = # grade book all items
+label.gradebookcm                 = # grade book course module items
 label.group                       = Grupo:
 label.groupbydate                 = Agrupar por:
 label.groups                      = Groups
@@ -192,6 +198,7 @@ label.loadingActivitiesCompletion = Baixando Atividade Conclus\u00E3o para cada 
 label.loadingqualifier            = Gerando qualificador do curso ... (Esse processo pode levar algum tempo)
 label.loadingstats                = Gerando estat\u00EDsticas...
 label.loadingstudents             = Notas do aluno carregado...
+label.logentries                  = # logs entries
 label.loggedin                    = Logged in:
 label.ncourses                    = N\u00BA enrolled courses
 label.never                       = N\u00E3o dispon\u00EDvel
@@ -205,10 +212,12 @@ label.rol                         = Rol:
 label.roles                       = Roles
 label.savelocal                   = Salvando em locais ...
 label.section                     = Se\u00E7\u00F5es:
+label.sections                    = # sections
 label.selectcourse                = Por favor, selecione um curso:
 label.setMax                      = Alterar escala m\u00E1xima sugerida:
 label.startdate                   = Data de refer\u00EAncia inicial:
 label.type                        = Tipo:
+label.typecomponentevents         = # components-events type 
 label.updatinglog                 = Atualizando log ... (This process may take some time)
 label.user                        = Usu\u00E1rio:
 label.welcome                     = Bem vinda
@@ -673,6 +682,7 @@ menu.about          = Sobre a aplica\u00E7\u00E3o
 menu.changeconfig   = Change configuration
 menu.changesubject  = Mudar de course
 menu.clearselection = Sele\u00E7\u00E3o clara
+menu.coursestats    = Course stats
 menu.edit           = Editar
 menu.exit           = Sa\u00EDda
 menu.exportconfig   = Export configuration...
