Course stats bug fixed

--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -682,7 +682,7 @@ menu.about          = _About application
 menu.changeconfig   = _Change configuration
 menu.changesubject  = _Change course
 menu.clearselection = _Clear selection
-menu.coursestats    = Course stats
+menu.coursestats    = _Course stats
 menu.edit           = _Edit
 menu.exit           = _Close
 menu.exportconfig   = Ex_port configuration...
