--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -682,7 +682,7 @@ menu.about          = A_cerca de la aplicaci\u00F3n
 menu.changeconfig   = Ca_mbiar configuraci\u00F3n
 menu.changesubject  = _Cambiar curso
 menu.clearselection = _Borrar selecci\u00F3n
-menu.coursestats    = Estad\u00EDsticas del curso
+menu.coursestats    = E_stad\u00EDsticas del curso
 menu.edit           = _Editar
 menu.exit           = _Salir
 menu.exportconfig   = Ex_portar configuraci\u00F3n...
