Export selected users photo

--- a/src/main/resources/messages/Messages_ca.properties
+++ b/src/main/resources/messages/Messages_ca.properties
@@ -687,6 +687,7 @@ menu.edit           = Edita
 menu.exit           = Sortir
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Exportar CSV...
+menu.exportphotos   = Export selected user photos...
 menu.file           = _Dossier
 menu.help           = Ajuda
 menu.importconfig   = Import configuration...
