--- a/src/main/resources/messages/Messages_de.properties
+++ b/src/main/resources/messages/Messages_de.properties
@@ -687,6 +687,7 @@ menu.edit           = Bearbeiten
 menu.exit           = Ausgang
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = CSV-Daten exportieren...
+menu.exportphotos   = Export selected user photos...
 menu.file           = _Datei
 menu.help           = Hilfe
 menu.importconfig   = Import configuration...
