--- a/src/main/resources/messages/Messages_en.properties
+++ b/src/main/resources/messages/Messages_en.properties
@@ -687,6 +687,7 @@ menu.edit           = _Edit
 menu.exit           = _Close
 menu.exportconfig   = Ex_port configuration...
 menu.exportcsv      = E_xport CSV data...
+menu.exportphotos   = Export selected user photos...
 menu.file           = _File
 menu.help           = _Help
 menu.importconfig   = _Import configuration...
