--- a/src/main/resources/messages/Messages_es.properties
+++ b/src/main/resources/messages/Messages_es.properties
@@ -687,6 +687,7 @@ menu.edit           = _Editar
 menu.exit           = _Salir
 menu.exportconfig   = Ex_portar configuraci\u00F3n...
 menu.exportcsv      = E_xportar datos CSV...
+menu.exportphotos   = Exportar fotos de los usuarios seleccionados...
 menu.file           = _Archivo
 menu.help           = A_yuda
 menu.importconfig   = _Importar configuraci\u00F3n...
