--- a/src/main/resources/messages/Messages_fr.properties
+++ b/src/main/resources/messages/Messages_fr.properties
@@ -687,6 +687,7 @@ menu.edit           = modifier
 menu.exit           = Sortie
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Exporter des donn\u00E9es CSV...
+menu.exportphotos   = Export selected user photos...
 menu.file           = _Fichier
 menu.help           = Aidez-moi
 menu.importconfig   = Import configuration...
