--- a/src/main/resources/messages/Messages_it.properties
+++ b/src/main/resources/messages/Messages_it.properties
@@ -687,6 +687,7 @@ menu.edit           = modificare
 menu.exit           = Uscita
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Esporta dati CSV...
+menu.exportphotos   = Export selected user photos...
 menu.file           = _File
 menu.help           = Aiuto
 menu.importconfig   = Import configuration...
