--- a/src/main/resources/messages/Messages_pt.properties
+++ b/src/main/resources/messages/Messages_pt.properties
@@ -687,6 +687,7 @@ menu.edit           = Editar
 menu.exit           = Sa\u00EDda
 menu.exportconfig   = Export configuration...
 menu.exportcsv      = Exportar dados CSV...
+menu.exportphotos   = Export selected user photos...
 menu.file           = _Arquivo
 menu.help           = Socorro
 menu.importconfig   = Import configuration...
